--- a/baidu_7_8_day/ife/ife.html
+++ b/baidu_7_8_day/ife/ife.html
@@ -13,16 +13,44 @@
             <div id="logo"><p id="logo-p">logo</p></div>
             <div id="header-back-nav">
                 
-                <div class="one">1</div> 
-                <div class="two">2</div> 
-                <div class="thr">3</div> 
+                <div class="one"><a href="#">Github</a></div> 
+                <div class="two"><a href="#">Register</a></div> 
+                <div class="thr"><a href="#">Login</a></div> 
                   
             </div>
         </div>
     </div>
-    <div id="banner">1</div>
-    <div id="nav"></div>
-    <div id="section"></div>
-    <div id="footer"></div>
+    <div id="banner">
+        <div id="button-back">
+             <div id="button_div">
+                <button type="button" class="btn">1</button>
+                <button type="button" class="btn active1">2</button>
+                <button type="button" class="btn">3</button>
+                <button type="button" class="btn">4</button>
+            </div>
+        </div> 
+    </div>
+    <div id="nav">
+        <div id="nav-back">
+            <div id="hpa">
+                <div id="home">HOME</div>
+                <div id="profile">PROFILE</div>
+                <div id="about">ABOUT</div>
+            </div>
+        </div>
+    </div>
+    <div id="section">
+        <div id="one-content">
+            <div class="content1">clasasdasdasdasdasdads="content1"</div>
+            <div class="content2">class="content1"</div>
+            <div class="content3">class="content1"</div>
+        </div>
+        <div id="tow-content"></div>
+        <div id="thr-content"></div>
+    </div>
+    <div id="footer">
+        <div id="footer-ife">2018 ife.baidu.com
+        </div>
+    </div>
 </body>
 </html>
